--- a/www/templates/setting.html
+++ b/www/templates/setting.html
@@ -15,13 +15,13 @@
   	</label>
     
     </ion-list>
-
-<!--     {{myLanguage.value}}
+    
+<!--     
+    {{myLanguage.value}}
+    <br>
+    sel - {{sel_text}}
+    <br>
  -->
-    <br>
-
-
-    <br>
 
 </div>
 
